# fptalks

./: README.md  fptalks.cabal  fptalks.routes  sqlite.db3  stack.yaml
app/: FPTalks.hs
icons/: 1
src/: Decoration.hs  Foundation.hs  Sendmail.hs  Styles.hs
