name:          fptalks
version:       0.1
category:      Web

synopsis:      FPTalks messenger
description:   Simple functional messenger project

author:        Andrey Mulik
maintainer:    work.a.mulik@gmail.com
bug-reports:   https://github.com/andreymulik/fptalks/issues

copyright:     2020 Andrey Mulik
license-file:  LICENSE
license:       BSD3

build-type:    Simple
cabal-version: >=1.10

source-repository head
  location: https://github.com/andreymulik/fptalks
  type:     git

---            _      _____ ______ ______   ___  ______ __   __              ---
---           | |    |_   _|| ___ \| ___ \ / _ \ | ___ \\ \ / /              ---
---           | |      | |  | |_/ /| |_/ // /_\ \| |_/ / \ V /               ---
---           | |      | |  | ___ \|    / |  _  ||    /   \ /                ---
---           | |____ _| |_ | |_/ /| |\ \ | | | || |\ \   | |                ---
---           \_____/ \___/ \____/ \_| \_|\_| |_/\_| \_|  \_/                ---

Library
  default-language: Haskell2010
  hs-source-dirs:   src
  
  ghc-options:      -O2 -Wall -Wno-orphans
  
  build-depends:
    -- basics
    bytestring,
    base,
    text,
    time,
    
    -- Web
    yesod-persistent,
    yesod-core == 1.6.*,
    yesod-form,
    yesod-auth,
    wai,
    
    -- Direct HTML operations
    blaze-markup,
    blaze-html,
    
    -- Direct JSON operations
    aeson,
    
    -- DB
    persistent-template,
    persistent-sqlite,
    persistent,
    
    -- Additional markup DSLs
    shakespeare,
    
    -- Mail
    email-validate,
    mime-mail
  
  exposed-modules:
    Foundation
    Decoration
    Sendmail
    Styles

Executable fptalks
  default-language: Haskell2010
  hs-source-dirs:   app
  
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
  main-is:     FPTalks.hs
  
  build-depends:
    persistent-sqlite,
    monad-logger,
    yesod-core,
    fptalks,
    base



